# diamond-iq

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy.yml  frontend-deploy.yml
docs/: architecture.md  option5-design.md  runbook.md  setup.md
docs/adr/: 001-single-table-dynamodb.md  002-vendored-shared-code.md  003-stdlib-http-client.md  004-two-date-ingestion-window.md  005-oidc-vs-iam-user-credentials.md  006-archive-file-dynamic-source.md  007-multi-account-aws-postponement.md  008-bedrock-model-access.md  009-daily-content-generation.md  010-waf-and-rate-limiting.md  011-realtime-streaming-pipeline.md  012-player-data-architecture.md  013-cost-protections.md  014-frontend-hosting-and-cloudflare-edge.md  015-phase-6-feature-expansion.md  016-statcast-integration.md  017-stadium-warm-visual-identity.md
frontend/: .env.development  .env.example  .env.production  .env.test  .eslintrc.cjs  .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: index.css  main.tsx  router.tsx  vite-env.d.ts
infrastructure/: .terraform.lock.hcl  alerts.tf  api_gateway_account.tf  cloudfront.tf  main.tf  outputs.tf  terraform.tfvars.example  test_bedrock_stub.tf  variables.tf  websocket.tf
scripts/: bootstrap_tf.sh  invoke_api_locally.py  invoke_generate_locally.py  invoke_ingest_locally.py  smoke_test_bedrock_haiku.py
tests/: conftest.py
(+280 files in other folders)
